compiler/tests/fixtures/invalid/semantics/selector_candidate_missing_precast_role.viv
// Invalid: selector candidate fails to precast target's precast role

reserved action ceremony:
    roles:
        @leader:
            as: initiator
        @guest:
            as: character, precast

action wave:
    roles:
        @waver:
            as: initiator

action-selector pick:
    roles:
        @actor:
            as: initiator
    target randomly:
        ceremony:
            with partial:
                @leader: @actor
        ;
        wave;
